--- a/style.css
+++ b/style.css
@@ -600,6 +600,23 @@ footer span a:hover{
     text-decoration: underline;
 }
 
+.avatar {
+	overflow: hidden;
+	transform: translatey(0px);
+	animation: float 1s ease-in-out infinite;
+}
+
+@keyframes float {
+	0% {
+		transform: translatey(0px);
+	}
+	50% {
+		transform: translatey(-5px);
+	}
+	100% {
+		transform: translatey(0px);
+	}
+}
 
 /* Responsive Media Query Start */
 @media (max-width: 1300px){
